--- a/NewRingTones/app/src/main/res/layout/activity_main.xml
+++ b/NewRingTones/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:id="@+id/view_"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    tools:ignore="UselessLeaf">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-</LinearLayout>
-</RelativeLayout>
+    <include
+        android:id="@+id/tl"
+        layout="@layout/toobar_layout" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="50dp"
+        android:background="@mipmap/ic_launcher"
+        android:elevation="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tl"
+        tools:ignore="UnusedAttribute" />
+
+
+    <TextView
+        android:id="@+id/start_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
+        android:gravity="center"
+        android:text="@string/start_time"
+        android:textSize="10sp"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_pager"
+        tools:ignore="SmallSp" />
+
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:maxHeight="1dp"
+        android:minHeight="1dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/seekbar_style"
+        android:thumb="@drawable/seekbar_thume"
+        app:layout_constraintHorizontal_weight="2.2"
+        app:layout_constraintLeft_toRightOf="@id/start_time"
+        app:layout_constraintRight_toLeftOf="@id/end_time"
+        app:layout_constraintTop_toTopOf="@id/start_time" />
+
+    <TextView
+        android:id="@+id/end_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:text="@string/end_time"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@id/start_time"
+        app:layout_constraintHorizontal_weight="0.2"
+        app:layout_constraintLeft_toRightOf="@id/seek_bar"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="SmallSp" />
+
+    <ImageView
+        android:id="@+id/left"
+        android:layout_width="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="50dp"
+        android:src="@drawable/up"
+        android:layout_marginTop="70dp"
+        app:layout_constraintHorizontal_weight="0.2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/play_but"
+        app:layout_constraintTop_toBottomOf="@id/seek_bar"
+        android:contentDescription="@string/todo"
+        android:layout_marginStart="10dp" />
+
+    <ImageView
+        android:id="@+id/play_but"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:src="@drawable/play_selecter"
+        app:layout_constraintHorizontal_weight="2"
+        app:layout_constraintLeft_toRightOf="@id/left"
+        app:layout_constraintTop_toTopOf="@id/left"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintRight_toLeftOf="@id/right"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/right"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:src="@drawable/next"
+        android:layout_marginRight="10dp"
+        app:layout_constraintHorizontal_weight="0.2"
+        app:layout_constraintLeft_toRightOf="@id/play_but"
+        app:layout_constraintTop_toTopOf="@id/play_but"
+        app:layout_constraintRight_toRightOf="parent"
+        android:contentDescription="@string/todo"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="10dp" />
+</android.support.constraint.ConstraintLayout>
